Fix the print stylesheet to unset  overflow-y

--- a/public/css/print.css
+++ b/public/css/print.css
@@ -5,4 +5,8 @@
     aside {
         display: none;
     }
+    #chat {
+        max-height: unset;
+        overflow-y: unset;
+    }
 }
